--- a/chatbot.html
+++ b/chatbot.html
@@ -50,7 +50,7 @@
 
     <!-- Optional map for itinerary preview -->
      <a href="https://www.facebook.com/">click here</a>
-      <h2 class="text-2xl font-semibold mb-4">Itinerary Map</h2>
+      <h2 class="text-2xl font-semibold mb-4">Map</h2>
       <div id="planner-map" class="w-full h-64 rounded-lg"></div>
     </section>
   </main>
